# metadata

./: .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: arbitrary.rs  glyphpathlen.rs  glyphs.rs  glyphslen.rs  main.rs  write_metainfo.rs
src/util/: mod.rs
