[package]
name = "MFEKmetadata"
version = "0.0.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
description = "Basic metadata fetcher for the MFEK project. It interrogates UFO fonts, for now mostly fontinfo.plist"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
norad = "0.6"
serde-value = "0.7.0"
serde_json = "1"
enum_for_matches = "0.1.1"
unic-ucd = "0.9"
csv = "1.1"
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", default-features = false }
MFEKmath = { git = "https://github.com/MFEK/math.rlib", branch = "main", default-features = false }
kurbo = "0.8"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
