[package]
name = "MFEKmetadata"
version = "0.0.2-beta1"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
description = "Basic metadata fetcher for the MFEK project. It interrogates UFO fonts, for now mostly fontinfo.plist"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
norad = "0.6"
serde_json = "1"
unic-ucd = "0.9"
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", default-features = false }
#glifparser = { path = "../glifparser.rlib", default-features = false } # for development
MFEKmath = { git = "https://github.com/MFEK/math.rlib", branch = "main", default-features = false }
#MFEKmath = { path = "../math.rlib", default-features = false } # for development
mfek-ipc = { git = "https://github.com/MFEK/ipc.rlib" }
#mfek-ipc = { path = "../ipc.rlib" } # for development
kurbo = "0.8"
plist = "1.3.1"
log = "0.4"
env_logger = "0.9"
itertools = "*"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
