[package]
name = "MFEKmetadata"
version = "0.0.3-beta1"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
description = "Basic metadata fetcher for the MFEK project. It interrogates UFO fonts, for now mostly fontinfo.plist"
edition = "2021"
license = "Apache-2.0"
keywords = ["ufo", "font-format", "glif", "fonts"]

[dependencies]
clap = "3.1.5"
norad = { git = "https://github.com/linebender/norad" }
serde_json = "1"
unic-ucd = "0.9"
fslock = { git = "https://github.com/MFEK/fslock.rlib", branch = "master" }
kurbo = "0.8"
plist = "1.3.1"
log = "0.4"
env_logger = "0.9"
itertools = "*"

# Our modules
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", default-features = false }
#glifparser = { path = "../glifparser.rlib", default-features = false } # for development
MFEKmath = { git = "https://github.com/MFEK/math.rlib", branch = "main", default-features = false }
#MFEKmath = { path = "../math.rlib", default-features = false } # for development
mfek-ipc = { git = "https://github.com/MFEK/ipc.rlib" }
#mfek-ipc = { path = "../ipc.rlib" } # for development

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
